--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /** @format */
 
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
+
 html,
 body {
 	width: 100%;
@@ -8,14 +10,160 @@ body {
 
 body {
 	margin: 0;
+	padding: 2em 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-color: hsl(225, 100%, 94%);
+	background-image: url(images/pattern-background-mobile.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: 0 center;
 }
 
 .main-container {
-	width: 85%;
+	width: 75%;
+	display: flex;
+	flex-direction: column-reverse;
+	font-family: "Red Hat Display", sans-serif;
+	font-size: 4vw;
+}
+
+.main-container,
+.subscription-details {
+	border-radius: 1em;
+}
+
+.main-content {
+	background-color: white;
+	border-radius: 0 0 1em 1em;
+	padding: 8% 6%;
+}
+
+.main-content > :first-child {
+	margin-top: 0;
+	text-align: center;
+	font-size: 1.5em;
+}
+
+.main-content > p {
+	text-align: center;
+	padding: 0 1em;
+	font-size: 0.85em;
+	font-weight: 500;
+	color: hsl(224, 23%, 55%);
+}
+
+.main-content > a {
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	font-weight: 700;
+}
+
+.subscription-details {
+	border-radius: 0.7em;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: hsl(225, 100%, 98%);
+}
+
+.subscription-details a {
+	display: inline-block;
+	margin-right: 0.8em;
+	color: hsl(245, 75%, 52%);
+	font-weight: 700;
+	font-size: 0.8em;
+}
+
+.subscription-details a:hover,
+.subscription-details a:focus {
+	text-decoration: none;
+	color: hsla(245, 75%, 52%, 0.7);
+}
+
+.subscription-duration {
+	width: 6em;
+	font-size: 0.9em;
+	margin-right: 2em;
+}
+
+.subscription-duration span {
+	color: hsl(224, 23%, 55%);
+	font-size: 0.9em;
+}
+
+.music-icon {
+	display: inline-block;
+	margin-left: 3%;
+	margin-right: 3%;
+	order: -1;
+	width: 15%;
+}
+
+.payment {
+	margin: 1em 0;
+	padding: 1em 0;
+	border-radius: 0.8em;
+	color: white;
+	background-color: hsl(245, 75%, 52%);
+	box-shadow: 0 1em 0.5em hsl(225, 100%, 94%);
+}
+
+.payment:hover,
+.payment:focus {
+	background-color: hsla(245, 75%, 52%, 0.7);
+}
+
+.terminate-order {
+	color: hsl(224, 23%, 55%);
+}
+
+.terminate-order:hover,
+.terminate-order:focus {
+	color: black;
+}
+
+.payment,
+.terminate-order {
+	font-size: 0.8em;
+}
+
+.success-image-container {
+}
+
+.success-image-container,
+.success-image {
+	border-radius: 1em 1em 0 0;
+}
+
+.success-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	/* border-radius: 2em 2em 0 0; */
+}
+
+/* For desktop design */
+
+@media screen and (min-width: 400px) {
+	body {
+		padding: 15% 0;
+		background-image: url(images/pattern-background-desktop.svg);
+		background-position: 0 0;
+		background-size: contain;
+	}
+
+	.main-container {
+		width: 40%;
+		font-size: 2vw;
+	}
+
+	.music-icon {
+		margin-right: 0;
+	}
 }
 
 .attribution {
